Fixed overflow bug

--- a/src/components/ProfileData/ProfileData.scss
+++ b/src/components/ProfileData/ProfileData.scss
@@ -1,7 +1,8 @@
 .profile-data-container {
-  height: 80%;
+  max-height: 80vh;
   border: 2px solid black;
   border-radius: 5px;
+  overflow: auto;
 }
 
 .profile-data-header {
