--- a/src/components/UserDetails/UserDetails.scss
+++ b/src/components/UserDetails/UserDetails.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 80%;
+  height: 80vh;
   border: 2px solid black;
   border-radius: 5px;
 
